objects/Lead_Generation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Management__c</fullName>
        <label>Account Management</label>
        <referenceTo>Customer_Success_Management__c</referenceTo>
        <relationshipLabel>Lead Generation</relationshipLabel>
        <relationshipName>Lead_Generation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will indicate the owner of this record.</description>
        <inlineHelpText>This field will indicate the owner of this record.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Plan__c</fullName>
        <label>Resolution Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead Generation</label>
    <nameField>
        <displayFormat>LG-{00000}</displayFormat>
        <label>Lead Generation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Generation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>